# cryptovault

./: .gitignore  .graphifyignore  Cargo.toml  HANDOFF.md  README.md
.github/workflows/: ci.yml  release-gate.yml  release.yml
docs/: ber-analysis.md  interleaver-csprng-degradation.md  no-panic.md  unsafe-audit.md
docs/audit/: AUDIT-0.1.0.md
docs/reviews/: TEMPLATE.md  fec-0.1.0.signed.md  fec-0.2.0.signed.md  fec-0.2.1.signed.md  fec-0.2.2.signed.md  fec-0.3.0.signed.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decrypt.rs  decrypt_viterbi_only.rs  fec_crates.rs  unwrap.rs
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
src/: blob.rs  cipher.rs  error.rs  kdf.rs  lib.rs  vault.rs
src/fec/: interleaver.rs  mod.rs  rs.rs  viterbi.rs
tests/: adversarial.rs  ber_analysis.rs  ber_provisional.rs  invariants.rs  kat.rs  kat_reference.rs  proptest.rs  scenarios.rs  viterbi_only_fec.rs
xtask/: Cargo.toml
xtask/src/: main.rs
