[package]
name = "cryptovault"
version = "0.0.1"
edition = "2021"
authors = ["Julian Bolivar <jbolivarg@gmail.com>"]
description = "Self-contained authenticated encryption vault: Argon2id KDF + AES-256-GCM-SIV + Reed-Solomon FEC, with envelope (DEK/KEK) key wrapping."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BolivarTech/cryptovault"
readme = "README.md"
keywords = ["cryptography", "encryption", "aead", "argon2", "vault"]
categories = ["cryptography"]

[dependencies]
# Authenticated encryption + KDF (vetted RustCrypto primitives — not rolled here).
aes-gcm-siv = "0.11"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
zeroize = "1.8"
# FEC: temporary third-party baseline. HANDOFF: switch to the `reedsolomon` crate.
reed-solomon = "0.2"

[dev-dependencies]
