[package]
name = "cryptovault"
version = "2.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Julian Bolivar <jbolivarg@gmail.com>"]
description = "Self-contained authenticated encryption vault: Argon2id KDF + AES-256-GCM-SIV + Reed-Solomon FEC, with envelope (DEK/KEK) key wrapping."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BolivarTech/cryptovault"
readme = "README.md"
keywords = ["cryptography", "encryption", "aead", "argon2", "vault"]
categories = ["cryptography"]

[dependencies]
# Authenticated encryption + KDF (vetted RustCrypto primitives — not rolled here).
aes-gcm-siv = "0.11"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
chacha20 = "0.9"        # CSPRNG interleaver keystream (Task 8).
subtle = "2"            # constant-time secret/tag comparison.
zeroize = "1.8"
rand = "0.8"
base64 = "0.22"
# FEC — BolivarTech's own crates (not security primitives): RS(255,223) + K=7 R=1/2 Viterbi.
reedsolomon = "0.1"
viterbi = "0.0.1"

[dev-dependencies]
