[package]
name = "cryptovault"
version = "0.2.1"
edition = "2021"
rust-version = "1.96"
authors = ["Julian Bolivar <jbolivarg@gmail.com>"]
description = "Authenticated encryption resilient over interference channels: AES-256-GCM-SIV over Argon2id/HKDF, followed by a concatenated Reed-Solomon + interleaver + Viterbi FEC."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BolivarTech/cryptovault"
readme = "README.md"
keywords = ["cryptography", "aead", "encryption", "reed-solomon", "fec"]
categories = ["cryptography"]
# Dev-only artifacts kept out of the published crate (knowledge graph, scratch
# specs, local runners). The crate ships source, tests, docs, and licenses only.
exclude = [
    "graphify-out/",
    "scripts/",
    "run-tests.py",
    "VITERBI_CRATE_SPEC.md",
    ".github/",
    # Internal magi-rs hardening brief (L3) — not part of the published crate.
    "HANDOFF.md",
    # Superseded provisional RS-only BER pass (L3); the finalized analysis lives
    # in tests/ber_analysis.rs.
    "tests/ber_provisional.rs",
]

[dependencies]
# Authenticated encryption + KDF (vetted RustCrypto primitives — not rolled here).
aes-gcm-siv = "0.11"
# `zeroize` feature (M2): wipes Argon2's internal transient state and lets us hold
# the 64 MiB working-memory block buffer in a drop-wiped `Zeroizing<Vec<Block>>`.
argon2 = { version = "0.5", features = ["zeroize"] }
hkdf = "0.12"
sha2 = "0.10"
# `zeroize` feature (L8): wipes the ChaCha20 keystream/block state on drop.
chacha20 = { version = "0.9", features = ["zeroize"] }        # CSPRNG interleaver keystream (Task 8).
subtle = "2"            # constant-time secret/tag comparison.
zeroize = "1.9"
rand = "0.8"
base64 = "0.22"
# FEC — BolivarTech's own crates (not security primitives): RS(255,223) + K=7 R=1/2 Viterbi.
# Exact-version pins: the concatenated wire format is locked to these codec
# releases, so a minor-version bump must be an explicit, reviewed change — never
# an accidental drift that could alter bit-packing/framing.
reedsolomon = "=0.2.0"
viterbi = "=0.1.0"

[dev-dependencies]
proptest = "1"          # property-based no-panic / round-trip coverage (SR-R5).
